# wemburs

./: Cargo.toml  pyproject.toml  readme.md  setup.py
pytest/: wemburs_test.py
src/: lib.rs
src/data_preprocessing/: mod.rs
src/dataframe/: mod.rs
src/descriptive_statistics/: dataframe.rs  errors.rs  mod.rs  unit_tests.rs  visualizations.rs
src/dtype_conversion/: mod.rs  to_py.rs  to_rust.rs
src/inferential_statistics/: errors.rs  mod.rs
src/linear_models/: errors.rs  mod.rs
src/outlier_detection/: mod.rs
src/utils/: mod.rs
src/visualizations/: mod.rs
tests/: integration_tests.rs
