[package]
name = "wemburs"
version = "0.1.0"
edition = "2021"

[lib]
name = "wemburs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.0" }
ndarray = "0.15"
ndarray-stats = "0.5.1"
polars = { version = "0.35.4" }
plotters = { version = "0.3" }
numpy = { version = "0.20.0" }
statrs = { version = "0.16.0" }
polars-core = "0.17.0"
polars-io = "0.17.0"
polars-arrow = "0.17.0"
thiserror = "1.0.20"


