[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wemburs"
version = "0.1.0"
authors = [{ name = "Myles Pember", email = "wmp43@cornell.edu" }]
readme = "README.md"
repository = "https://github.com/wmp43/wemburs"
license = "MIT/Apache-2.0"

[tool.maturin]
name = "wemburs"
features = ["pyo3/extension-module"]
